# smart-meter-server

./: .sops.yaml  Cargo.toml  ReadMe.md  inventory.yml  key.sops.yaml  playbook.yml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
